test/corpus/bit_select.txt
============================================
bit_select - one dimension
============================================

function f;
    a = b[1];
endfunction

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)
                        (select1
                          (bit_select1
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))))))))))))))))


============================================
bit_select - two dimensions
============================================

function f;
    a = b[1][1];
endfunction

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)
                        (select1
                          (bit_select1
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))
                            (expression
                              (primary
                                (primary_literal
                                  (integral_number
                                    (decimal_number
                                      (unsigned_number))))))))))))))))))))
