test/corpus/classes.txt
============================================
classes - attribute access
============================================

function foo;
   class_id.attribute = value;
endfunction

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (statement_item
                (blocking_assignment
                  (operator_assignment
                    (variable_lvalue
                      (simple_identifier)
                      (select1
                        (member_identifier
                          (simple_identifier))))
                    (assignment_operator)
                    (expression
                      (primary
                        (simple_identifier)))))))))))))
