test/corpus/macros.txt
============================================
macros - simple
============================================

`some_macro(arg1)

----

(source_file
  (text_macro_usage
    (text_macro_identifier
      (simple_identifier))
    (list_of_actual_arguments
      (expression
        (primary
          (simple_identifier))))))


============================================
macros - two args
============================================

`some_macro(arg1, arg2)

----

(source_file
  (text_macro_usage
    (text_macro_identifier
      (simple_identifier))
    (list_of_actual_arguments
      (expression
        (primary
          (simple_identifier)))
      (expression
        (primary
          (simple_identifier))))))


============================================
macros - nested parenthesis
============================================

`some_macro(arg1(), arg2())

----

(source_file
  (text_macro_usage
    (text_macro_identifier
      (simple_identifier))
    (list_of_actual_arguments
      (expression
        (primary
          (let_expression
            (simple_identifier))))
      (expression
        (primary
          (let_expression
            (simple_identifier)))))))


============================================
macros - inside function
============================================

function void foo;
  `some_macro(arg1)
endfunction

----

(source_file
  (package_or_generate_item_declaration
    (function_declaration
      (function_body_declaration
        (function_data_type_or_implicit1
          (data_type_or_void))
        (function_identifier
          (function_identifier
            (simple_identifier)))
        (function_statement_or_null
          (function_statement
            (statement
              (text_macro_usage
                (text_macro_identifier
                  (simple_identifier))
                (list_of_actual_arguments
                  (expression
                    (primary
                      (simple_identifier))))))))))))
